src/deploy/kubernetes/example-search-service/elasticsearch/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${_Values_root_name}-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/${_Values_ingress_name})$ \$1/ redirect; #Redirect if traling slash is missing
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/${_Values_ingress_name}"
    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret

spec:
  tls:
    - hosts:
        - goafabric.org
      secretName: server-certificate-secret
  rules:
#    - host: goafabric.org
    - http:
        paths:
          - path: /${_Values_ingress_name}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${_Values_app_name}
                port:
                  name: transport
